EADeployment/CA2/argo-apps/goldpinger/goldpinger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldpinger
